kube/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: bpt-admin
  labels:
    name: bpt-admin
    version: "0.__VERSION__"
  namespace: bpt
spec:
  replicas: 3
  template:
    metadata:
      labels:
        name: bpt-admin        
    spec:
      containers:
      - name: bpt-admin
        image: registry.ooo.ua/bulich/bpt-admin:__VERSION__
        ports:
        - name: admin
          containerPort: 80
      imagePullSecrets:
        - name: gitlab-registry
