kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bpt-admin-__CI_ENVIRONMENT_SLUG__
  labels:
    name: bpt-admin-__CI_ENVIRONMENT_SLUG__
    commit: __COMMIT__
    env: __CI_ENVIRONMENT_SLUG__
  namespace: bpt
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP    
  selector:
    name: bpt-admin-__CI_ENVIRONMENT_SLUG__ 
  type: LoadBalancer
  sessionAffinity: ClientIP
